Update agent instances as well as agent types when owner changes, this way when the AgentManager is created before the Akonadi.Control DBus interface, it will learn about new instances as well.

BUG: 236247

svn path=/trunk/KDE/kdepimlibs/; revision=1135699